--- a/setup.cfg
+++ b/setup.cfg
@@ -28,6 +28,8 @@ python_requires = >=3.11
 install_requires =
     bittensor
     torch
-
+    transformers
+    scikit-learn
+    datasets
 [options.packages.find]
 include = prompt_defender
