added vector search as an engine, added separate run script

--- a/setup.cfg
+++ b/setup.cfg
@@ -31,5 +31,6 @@ install_requires =
     transformers
     scikit-learn
     datasets
+    chromadb
 [options.packages.find]
 include = prompt_defender
