added YARA engine, changed output format

--- a/setup.cfg
+++ b/setup.cfg
@@ -32,5 +32,6 @@ install_requires =
     scikit-learn
     datasets
     chromadb
+    yara-python
 [options.packages.find]
 include = prompt_defender
