--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [metadata]
-name = prompt_defender
+name = llm_defender
 version = 0.0.1
 author = ceterum1
 author_email = ceterum1@proton.me
-description = This project implements a prompt defender subnet for Bittensor
+description = This project implements the llm-defender subnet for Bittensor
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/ceterum1/prompt-defender-subnet
