--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ author_email = ceterum1@proton.me
 description = This project implements the llm-defender subnet for Bittensor
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/ceterum1/prompt-defender-subnet
+url = https://github.com/ceterum1/llm-defender-subnet
 classifiers = 
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
@@ -34,4 +34,4 @@ install_requires =
     chromadb
     yara-python
 [options.packages.find]
-include = prompt_defender
+include = llm_defender
