--- a/setup.cfg
+++ b/setup.cfg
@@ -1,19 +1,19 @@
 [metadata]
-name = prompt_defender
-version = 0.0.1
+name = llm_defender
+version = 0.1.0
 author = ceterum1
 author_email = ceterum1@proton.me
-description = This project implements a prompt defender subnet for Bittensor
+description = This project implements the llm-defender subnet for Bittensor
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/ceterum1/prompt-defender-subnet
+url = https://github.com/ceterum1/llm-defender-subnet
 classifiers = 
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
     "Topic :: Software Development :: Build Tools",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3 :: Only",
-    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.10",
     "Topic :: Scientific/Engineering",
     "Topic :: Scientific/Engineering :: Mathematics",
     "Topic :: Scientific/Engineering :: Artificial Intelligence",
@@ -24,10 +24,14 @@ license_files = LICENSE
 
 [options]
 packages = find:
-python_requires = >=3.11
+python_requires = >=3.10
 install_requires =
     bittensor
     torch
-
+    transformers
+    scikit-learn
+    datasets
+    chromadb
+    yara-python
 [options.packages.find]
-include = prompt_defender
+include = llm_defender
