--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = llm_defender
-version = 0.2.0
+version = 0.2.1
 author = ceterum1
 author_email = ceterum1@proton.me
 description = This project implements the llm-defender subnet for Bittensor
@@ -33,5 +33,6 @@ install_requires =
     datasets
     chromadb
     yara-python
+    gitpython
 [options.packages.find]
 include = llm_defender
