--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,15 @@
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
+
+# Docker variables
+NETUID=
+SUBTENSOR_NETWORK=
+WALLET_PATH=
+VALIDATOR_WALLET=
+VALIDATOR_HOTKEY=
+VALIDATOR_IP=
+
+MINER_WALLET=
+MINER_HOTKEY=
+MINER_IP=
+MINER_PORT=
