updated docker compose with env variables for network, added env sample

--- a/.env.sample
+++ b/.env.sample
@@ -5,6 +5,7 @@ AWS_SECRET_ACCESS_KEY=
 NETUID=
 SUBTENSOR_NETWORK=
 WALLET_PATH=
+
 VALIDATOR_WALLET=
 VALIDATOR_HOTKEY=
 VALIDATOR_IP=
@@ -13,3 +14,6 @@ MINER_WALLET=
 MINER_HOTKEY=
 MINER_IP=
 MINER_PORT=
+
+DOCKER_NETWORK_GATEWAY=
+DOCKER_NETWORK_SUBNET=
