--- a/setup.cfg
+++ b/setup.cfg
@@ -28,11 +28,18 @@ python_requires = >=3.10
 install_requires =
     bittensor
     torch
+    gitpython
+    python-dotenv
+[options.packages.find]
+include = llm_defender
+
+[options.extras_require]
+wandb =
+    wandb
+miner = 
     transformers
-    scikit-learn
     datasets
     chromadb
     yara-python
-    gitpython
-[options.packages.find]
-include = llm_defender
+validator =
+    scikit-learn
