--- a/.env.sample
+++ b/.env.sample
@@ -6,11 +6,19 @@ WALLET_PATH=
 VALIDATOR_WALLET=
 VALIDATOR_HOTKEY=
 VALIDATOR_IP=
+VALIDATOR_PIP_INSTALL_PATH=
 
 MINER_WALLET=
 MINER_HOTKEY=
 MINER_IP=
 MINER_PORT=
+MINER_PIP_INSTALL_PATH=
 
 DOCKER_NETWORK_GATEWAY=
 DOCKER_NETWORK_SUBNET=
+
+# Wandb
+WANDB_ENABLE=0
+WANDB_KEY=
+WANDB_PROJECT=
+WANDB_ENTITY=
