added two miners to the dev docker image

--- a/.env.sample
+++ b/.env.sample
@@ -14,6 +14,11 @@ MINER_IP=
 MINER_PORT=
 MINER_PIP_INSTALL_PATH=
 
+MINER2_WALLET=
+MINER2_HOTKEY=
+MINER2_IP=
+MINER2_PORT=
+
 DOCKER_NETWORK_GATEWAY=
 DOCKER_NETWORK_SUBNET=
 
