--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       llm-defender-subnet-network-development:
         ipv4_address: ${VALIDATOR_IP}
 
-  miner:
+  miner1:
     image: llm-defender-subnet
     build:
       context: .
@@ -23,6 +23,17 @@ services:
     networks:
       llm-defender-subnet-network-development:
         ipv4_address: ${MINER_IP}
+  miner2:
+    image: llm-defender-subnet
+    build:
+      context: .
+      dockerfile: Dockerfile
+    volumes:
+      - .:/var/run/llm-defender-subnet
+    command: /bin/bash -c "source /tmp/.venv/bin/activate && pip install -e ${MINER_PIP_INSTALL_PATH} && pip uninstall -y uvloop && python3 /var/run/llm-defender-subnet/llm_defender/neurons/miner.py --netuid ${NETUID} --subtensor.network ${SUBTENSOR_NETWORK} --wallet.path ${WALLET_PATH} --wallet.name ${MINER2_WALLET} --wallet.hotkey ${MINER2_HOTKEY} --logging.debug --axon.port ${MINER2_PORT} --validator_min_stake 0 --axon.external_ip ${MINER2_IP}"
+    networks:
+      llm-defender-subnet-network-development:
+        ipv4_address: ${MINER2_IP}
 
 networks:
   llm-defender-subnet-network-development:
