--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,17 +12,17 @@ services:
       llm-defender-subnet-network-development:
         ipv4_address: ${VALIDATOR_IP}
   
-  validator2:
-    image: llm-defender-subnet
-    build:
-      context: .
-      dockerfile: Dockerfile   
-    command: /bin/bash -c "source /tmp/.venv/bin/activate && pip install -e ${VALIDATOR_PIP_INSTALL_PATH} && python3 /var/run/llm-defender-subnet/llm_defender/neurons/validator.py --netuid ${NETUID} --subtensor.network ${SUBTENSOR_NETWORK} --wallet.path ${WALLET_PATH} --wallet.name ${VALIDATOR2_WALLET} --wallet.hotkey ${VALIDATOR2_HOTKEY} --logging.debug"
-    volumes:
-      - .:/var/run/llm-defender-subnet
-    networks:
-      llm-defender-subnet-network-development:
-        ipv4_address: ${VALIDATOR2_IP}
+  # validator2:
+  #   image: llm-defender-subnet
+  #   build:
+  #     context: .
+  #     dockerfile: Dockerfile   
+  #   command: /bin/bash -c "source /tmp/.venv/bin/activate && pip install -e ${VALIDATOR_PIP_INSTALL_PATH} && python3 /var/run/llm-defender-subnet/llm_defender/neurons/validator.py --netuid ${NETUID} --subtensor.network ${SUBTENSOR_NETWORK} --wallet.path ${WALLET_PATH} --wallet.name ${VALIDATOR2_WALLET} --wallet.hotkey ${VALIDATOR2_HOTKEY} --logging.debug"
+  #   volumes:
+  #     - .:/var/run/llm-defender-subnet
+  #   networks:
+  #     llm-defender-subnet-network-development:
+  #       ipv4_address: ${VALIDATOR2_IP}
 
   miner1:
     image: llm-defender-subnet
