--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = llm_defender
-version = 0.6.1
+version = 0.6.2
 author = ceterum1
 author_email = ceterum1@proton.me
 description = This project implements the llm-defender subnet for Bittensor
@@ -26,7 +26,7 @@ license_files = LICENSE
 packages = find:
 python_requires = >=3.10
 install_requires =
-    bittensor == 6.9.3
+    bittensor >= 6.12.0
     torch
     gitpython
     python-dotenv
