--- a/setup.cfg
+++ b/setup.cfg
@@ -26,7 +26,7 @@ license_files = LICENSE
 packages = find:
 python_requires = >=3.10
 install_requires =
-    bittensor >= 6.12.0
+    bittensor == 6.9.3
     torch
     gitpython
     python-dotenv
