update setup.cfg metadata, version push to 0.7.0

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,14 +1,14 @@
 [metadata]
 name = llm_defender
-version = 0.6.1
-author = ceterum1
-author_email = ceterum1@proton.me
+version = 0.7.0
+author = synapsec.ai
+author_email = contact@synapsec.ai
 description = This project implements the llm-defender subnet for Bittensor
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/ceterum1/llm-defender-subnet
+url = https://github.com/synapsec-ai/llm-defender-subnet
 classifiers = 
-    "Development Status :: 3 - Alpha",
+    "Development Status :: 3 - Beta",
     "Intended Audience :: Developers",
     "Topic :: Software Development :: Build Tools",
     "License :: OSI Approved :: MIT License",
