--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,13 +25,13 @@ classifiers = [
     "Topic :: Software Development :: Libraries",
     "Topic :: Software Development :: Libraries :: Python Modules"
 ]
-requires-python = ">=3.10,<3.11"
+requires-python = ">=3.10,<3.12"
 
 dependencies = [
     "bittensor==7.0.0",
-    "torch==2.3.0",
     "gitpython==3.1.43",
-    "python-dotenv==1.0.1"
+    "python-dotenv==1.0.1",
+    "torch==2.3.0"
 ]
 
 [project.urls]
