--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,8 @@ dependencies = [
     "bittensor==7.0.1",
     "gitpython==3.1.43",
     "python-dotenv==1.0.1",
+    "wonderwords==2.2.0",
+    "english-words==2.0.1",
 ]
 
 [project.urls]
