--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,7 @@ homepage = "https://github.com/synapsec-ai/llm-defender-subnet"
 [project.optional-dependencies]
 wandb = ["wandb==0.17.0"]
 miner = ["transformers==4.41.2", "datasets==2.19.1", "torch==2.3.0"]
-validator = ["scikit-learn==1.5.0", "numpy==1.26.4"]
+validator = ["scikit-learn==1.5.0", "numpy==1.26.4", "datasets==2.20.0"]
 
 [tool.setuptools.packages.find]
 include = ["llm_defender"]
