--- a/.env.sample
+++ b/.env.sample
@@ -1,29 +1,7 @@
-# Docker variables
-NETUID=
-SUBTENSOR_NETWORK=
-WALLET_PATH=
-
-VALIDATOR_WALLET=
-VALIDATOR_HOTKEY=
-VALIDATOR_IP=
-VALIDATOR_PIP_INSTALL_PATH=
-
-MINER_WALLET=
-MINER_HOTKEY=
-MINER_IP=
-MINER_PORT=
-MINER_PIP_INSTALL_PATH=
-
-MINER2_WALLET=
-MINER2_HOTKEY=
-MINER2_IP=
-MINER2_PORT=
-
-DOCKER_NETWORK_GATEWAY=
-DOCKER_NETWORK_SUBNET=
-
-# Wandb
-WANDB_ENABLE=0
-WANDB_KEY=
-WANDB_PROJECT=
-WANDB_ENTITY=
+NETUID=38
+SUBTENSOR_NETWORK=test
+SUBTENSOR_CHAIN_ENDPOINT=wss://test.finney.opentensor.ai:443
+VALIDATOR_WALLET=validator
+VALIDATOR_HOTKEY=default
+LOG_LEVEL=INFO
+BITTENSOR_HOST_CONFIG_PATH=/root/.bittensor
