--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,56 +1,34 @@
-version: '3'
 services:
-  validator1:
-    image: llm-defender-subnet
+  llm-defender-validator:
+    depends_on: 
+      - prompt-generation-api
+    restart: unless-stopped
     build:
       context: .
-      dockerfile: Dockerfile   
-    command: /bin/bash -c "source /tmp/.venv/bin/activate && pip install -e ${VALIDATOR_PIP_INSTALL_PATH} && ls -la /var/run/llm-defender-subnet/ && ls -la /var/run/llm-defender-subnet/llm_defender && python3 /var/run/llm-defender-subnet/llm_defender/neurons/validator.py --netuid ${NETUID} --subtensor.network ${SUBTENSOR_NETWORK} --wallet.path ${WALLET_PATH} --wallet.name ${VALIDATOR_WALLET} --wallet.hotkey ${VALIDATOR_HOTKEY} --log_level DEBUG"
+      dockerfile: validator.Dockerfile
+    command: /bin/bash -c "source /tmp/.venv/bin/activate && pip install -e /var/run/llm-defender-subnet[validator] && python3 /var/run/llm-defender-subnet/llm_defender/neurons/validator.py --netuid ${NETUID} --subtensor.network ${SUBTENSOR_NETWORK} --subtensor.chain_endpoint ${SUBTENSOR_CHAIN_ENDPOINT} --wallet.name ${VALIDATOR_WALLET} --wallet.hotkey ${VALIDATOR_HOTKEY} --log_level ${LOG_LEVEL}"
     volumes:
-      - .bittensor:/tmp/.bittensor
-    networks:
-      llm-defender-subnet-network-development:
-        ipv4_address: ${VALIDATOR_IP}
-  
-  # validator2:
-  #   image: llm-defender-subnet
-  #   build:
-  #     context: .
-  #     dockerfile: Dockerfile   
-  #   command: /bin/bash -c "source /tmp/.venv/bin/activate && pip install -e ${VALIDATOR_PIP_INSTALL_PATH} && python3 /var/run/llm-defender-subnet/llm_defender/neurons/validator.py --netuid ${NETUID} --subtensor.network ${SUBTENSOR_NETWORK} --wallet.path ${WALLET_PATH} --wallet.name ${VALIDATOR2_WALLET} --wallet.hotkey ${VALIDATOR2_HOTKEY} --log_level DEBUG"
-  #   volumes:
-  #     - .:/var/run/llm-defender-subnet
-  #   networks:
-  #     llm-defender-subnet-network-development:
-  #       ipv4_address: ${VALIDATOR2_IP}
+      - ./:/var/run/llm-defender-subnet/
+      - llm-defender-subnet:/root/.llm-defender-subnet
+      - ~/.bittensor/:/root/
+  prompt-generation-api:
+    restart: unless-stopped
+    image: vllm/vllm-openai:v0.5.0
+    ports:
+      - "8000:8000"
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: all
+              capabilities: [gpu]
+    ipc: host
+    command: [
+      "--model", "TheBloke/Mixtral-8x7B-Instruct-v0.1-GPTQ",
+      "--revision", "gptq-8bit-128g-actorder_True",
+      "--tensor-parallel-size", "4"
+    ]
 
-  miner1:
-    image: llm-defender-subnet
-    build:
-      context: .
-      dockerfile: Dockerfile
-    command: /bin/bash -c "source /tmp/.venv/bin/activate && pip install -e ${MINER_PIP_INSTALL_PATH} && pip uninstall -y uvloop && python3 /var/run/llm-defender-subnet/llm_defender/neurons/miner.py --netuid ${NETUID} --subtensor.network ${SUBTENSOR_NETWORK} --wallet.path ${WALLET_PATH} --wallet.name ${MINER_WALLET} --wallet.hotkey ${MINER_HOTKEY} --axon.port ${MINER_PORT} --validator_min_stake 0 --axon.external_ip ${MINER_IP} --log_level DEBUG"
-    volumes:
-      - .bittensor:/tmp/.bittensor
-    networks:
-      llm-defender-subnet-network-development:
-        ipv4_address: ${MINER_IP}
-  miner2:
-    image: llm-defender-subnet
-    build:
-      context: .
-      dockerfile: Dockerfile
-    command: /bin/bash -c "source /tmp/.venv/bin/activate && pip install -e ${MINER_PIP_INSTALL_PATH} && pip uninstall -y uvloop && python3 /var/run/llm-defender-subnet/llm_defender/neurons/miner.py --netuid ${NETUID} --subtensor.network ${SUBTENSOR_NETWORK} --wallet.path ${WALLET_PATH} --wallet.name ${MINER2_WALLET} --wallet.hotkey ${MINER2_HOTKEY} --axon.port ${MINER2_PORT} --validator_min_stake 0 --axon.external_ip ${MINER2_IP} --log_level DEBUG"
-    volumes:
-      - .bittensor:/tmp/.bittensor
-    networks:
-      llm-defender-subnet-network-development:
-        ipv4_address: ${MINER2_IP}
-
-networks:
-  llm-defender-subnet-network-development:
-    driver: bridge
-    ipam:
-     config:
-       - subnet: ${DOCKER_NETWORK_SUBNET}
-         gateway: ${DOCKER_NETWORK_GATEWAY}
+volumes:
+  llm-defender-subnet:
