--- a/min_compute.yml
+++ b/min_compute.yml
@@ -12,7 +12,7 @@
 # fil will be updated once version 1.0.0 is reached.
 
 
-version: '0.1.3' # update this version key as needed, ideally should match your release version
+version: '0.9.0' # update this version key as needed, ideally should match your release version
 
 compute_spec:
 
@@ -61,30 +61,31 @@ compute_spec:
       architecture: "x86_64"  # Architecture type (e.g., x86_64, arm64)
 
     gpu:
-      required: False                      # Does the application require a GPU?
-      min_vram: 0                          # Minimum GPU VRAM (GB)
-      recommended_vram: 0                  # Recommended GPU VRAM (GB)
-      cuda_cores: 0                        # Minimum number of CUDA cores (if applicable)
-      min_compute_capability: 0            # Minimum CUDA compute capability
-      recommended_compute_capability: 0    # Recommended CUDA compute capability
-      recommended_gpu: null                # provide a recommended GPU to purchase/rent
+      required: True                            # Does the application require a GPU?
+      min_vram: 80GB                            # Minimum GPU VRAM (GB)
+      recommended_vram: 80GB                    # Recommended GPU VRAM (GB)
+      cuda_cores: 0                             # Minimum number of CUDA cores (if applicable)
+      min_compute_capability: 0                 # Minimum CUDA compute capability
+      recommended_compute_capability: 0         # Recommended CUDA compute capability
+      recommended_gpu: "4xA10G"                 # provide a recommended GPU to purchase/rent
+      cuda_version: 12.2                        # CUDA version
 
     memory:
-      min_ram: 8          # Minimum RAM (GB)
-      min_swap: 4          # Minimum swap space (GB)
-      recommended_swap: 8  # Recommended swap space (GB)
-      ram_type: "DDR4"     # RAM type (e.g., DDR4, DDR3, etc.)
+      min_ram: 128            # Minimum RAM (GB)
+      min_swap: 8             # Minimum swap space (GB)
+      recommended_swap: 8     # Recommended swap space (GB)
+      ram_type: "DDR4"        # RAM type (e.g., DDR4, DDR3, etc.)
 
     storage:
-      min_space: 10           # Minimum free storage space (GB)
-      recommended_space: 50  # Recommended free storage space (GB)
+      min_space: 512          # Minimum free storage space (GB)
+      recommended_space: 512  # Recommended free storage space (GB)
       type: "SSD"             # Preferred storage type (e.g., SSD, HDD)
       min_iops: 1000          # Minimum I/O operations per second (if applicable)
-      recommended_iops: 5000  # Recommended I/O operations per second
+      recommended_iops: 1000  # Recommended I/O operations per second
 
     os:
-      name: "Debian"  # Name of the preferred operating system(s)
-      version: 12  # Version of the preferred operating system(s)
+      name: "ubuntu"  # Name of the preferred operating system(s)
+      version: 22.04  # Version of the preferred operating system(s)
 
 network_spec:
   bandwidth:
