--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,9 +28,11 @@ classifiers = [
 requires-python = ">=3.10,<3.12"
 
 dependencies = [
-    "bittensor==7.0.1",
+    "bittensor==7.2.0",
     "gitpython==3.1.43",
     "python-dotenv==1.0.1",
+    "wonderwords==2.2.0",
+    "english-words==2.0.1",
 ]
 
 [project.urls]
