--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,8 +31,6 @@ dependencies = [
     "bittensor==7.2.0",
     "gitpython==3.1.43",
     "python-dotenv==1.0.1",
-    "wonderwords==2.2.0",
-    "english-words==2.0.1",
 ]
 
 [project.urls]
@@ -41,7 +39,8 @@ homepage = "https://github.com/synapsec-ai/llm-defender-subnet"
 [project.optional-dependencies]
 wandb = ["wandb==0.17.0"]
 miner = ["transformers==4.41.2", "datasets==2.19.1", "torch==2.3.0"]
-validator = ["scikit-learn==1.5.0", "numpy==1.26.4"]
+validator = ["scikit-learn==1.5.0", "numpy==1.26.4", "wonderwords==2.2.0", "english-words==2.0.1"]
+api = ["fastapi==0.110.1", "uvicorn==0.22.0", "python-multipart==0.0.9"]
 
 [tool.setuptools.packages.find]
 include = ["llm_defender"]
