--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,17 @@
+.bittensor
+.local
+.github
+.pytest_cache
+.venv
+.vscode
+chroma
+*.egg-info
+tests
+wandb
+.coverage
+*.config.js
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -173,5 +187,3 @@ wandb
 
 # chromadb
 chroma
-
-.api-env
